# console

./: --url  .actions-outdated-allowlist  .actions-upgrade-blocklist  .audit-allowlist  .audit-prod-allowlist  .ci-trigger  .deps-outdated-allowlist  .deps-upgrade-blocklist  .dockerignore  .editorconfig  .eslintrc.json  .gitattributes  .gitignore  .gitmodules  .go-deps-upgrade-blocklist  .knip-ignores  .npmrc  .prop-relay-allowlist  .syncpackrc-reasons.json  .syncpackrc.json  404.html  CLAUDE.md  CLI_IMPLEMENTATION.md  CONSOLE_MODULAR_ARCHITECTURE_PLAN.md  DEPLOYMENT.md  DS_MIGRATION.md  Dockerfile  Dockerfile.native  Dockerfile.onprem  Dockerfile.standalone  LICENSE  MONOREPO_MIGRATION_PLAN.md  OPENSOURCE_README.md  OPENSOURCE_SETUP.md  PLAN.md  PR_DESCRIPTION.md  README.md  REFACTORING.md  REFACTORING_CONTINUATION.md  REFACTORING_TODO.md  (+55 more)
.ci/: README.md
.claude/: ralph-loop.local.md  settings.json  settings.local.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.server.yml  download-extensions.sh  init-submodules.sh  install-sqlcmd.sh  start-desktop.sh  start-kvm.sh  start-ttyd.sh  start-vscode.sh
.gemini/: config.yaml  styleguide.md
.github/: CODEOWNERS  CONTRIBUTING.md  VERSIONED_DEPLOYMENTS.md  dependabot.yml  labels.yml  pull_request_template.md
.idx/: dev.nix
assets/: index-B3FT8ctU.js  index-BL9oc91X.js  index-BR9NOAob.js  index-BVsYfcoL.js  index-C3d_Y3xW.js  index-CALmYo7w.js  index-CBjoh7UE.js  index-CEPyNj08.js  index-CFQf3U-j.js  index-ClLYmVcU.js  index-CqYCcjHh.js  index-Csirb_bB.js  index-CytpUOV-.js  index-DHXKaDWd.js  index-DSl6tB1Y.js  index-VtVQDmDS.js  index-i21q1ynI.js  worker-BG-iPlNy.js
cli/: package-lock.json  package.json  tsconfig.json
docs/: COMPONENT_CONSOLIDATION_PLAN.md  DESIGN-CONFIG-STORAGE.md  PLAN-ebpf-network-isolation.md  PLAN-multi-region.md  QUEUE_DATA_INJECTION.md  SECURITY-CONFIG-STORAGE.md  agent-session-playbook.md  code-signing-guide.md  tutorial-plan.md
eslint-rules/: e2e-test-naming-convention.js  no-duplicate-translation-props.js  no-hardcoded-cli-text.js  no-hardcoded-nullish-defaults.js  (+17 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
(+5028 files in other folders)
