[package]
name = "rediacc-console"
version = "1.0.0"
description = "Rediacc Console Desktop Application"
authors = ["Rediacc Team"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-http = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = 3          # Maximum optimization
lto = true            # Enable Link Time Optimization
codegen-units = 1     # Reduce parallel codegen for better optimization
strip = true          # Strip symbols from binary
panic = 'abort'       # Smaller binary size
